[tool.poetry]
name = "squeak"
version = "0.1.0"
description = "Quick manipulation of string SQL queries"
readme = "README.md"
authors = ["ali-tny <aliteeney@googlemail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
sqlparse = "^0.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
pydocstyle = "^5.1.1"
mypy = "^0.782"
pytest = "^6.0.2"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
