[tool.poetry]
name = "squeak"
version = "0.1.0"
description = "Quick manipulation of string SQL queries"
readme = "README.md"
authors = ["ali-tny <aliteeney@googlemail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
# Use my fork of sqlparse for correct parsing of Postgres WINDOW keyword
# until my PR on the original (https://github.com/andialbrecht/sqlparse/pull/579) is merged
sqlparse = { git = "https://github.com/ali-tny/sqlparse.git", branch = "add-window-as-keyword" }

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
pydocstyle = "^5.1.1"
mypy = "^0.782"
pytest = "^6.0.2"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
